public/Dashboard/dashboard.css
* {
    padding: 0;
    margin: 0;
    border: 0;
    color: white;
}

button {
    background-color: inherit;
}

.fb-logo-link {
    width: 3%;
}

main {
    padding-top: 10vh;
    height: 90vh;
}

nav {
    background-color: rgb(36, 37, 38);
    background-color: white;

}

.left,
.middle,
.right {
    width: 25%;
    height: 100vh;
    background-color: rgb(24,25,26);
}

.middle {
    width: 50%;
    height: 100vh;
    background-color: rgb(24, 25, 26);
    /* background-color: red; */
    padding-bottom: 10vh;
}

.inner-middle {
    height: 100%;
    /* margin-top: 105vh; */
    background-color: rgb(24, 25, 26);
    /* background-color: blue; */
}
.story-div {
    height: 40vh;
    background-color: rgb(36, 37, 38);
}

.btn11{
    /* background-color: red; */
    padding: 0.5rem;
}

.btn11:hover{
    background-color: rgb(58, 59, 60);
}

.post-div {
    /* height: 20vh; */
    background-color: rgb(36, 37, 38);
    font-size: 18px;
}

.pix-div {
    height: 2.5rem;
}

.pix {
    width: 2.5rem;
    height: 2.5rem;
}

.post-box {
    cursor: pointer;
    background-color: rgb(58, 59, 60);
}

.grey {
    color: rgb(176, 179, 184);
    font-weight: 600;
}

#myPostModal {
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.664);
    top: 10vh;
    left: 0;
    right: 0;
    z-index: 50;
}

#open-post-modal {
    height: 75%;
}

#write-post-modal {
    height: 100%;
    background-color: rgb(36,37,38);
}

.close-post-modal {
    background-color: rgb(58, 59, 60);
    padding: 0.3rem 0.5rem;
    font-size: 25px;
    top: 0.8rem;
    right: 1rem;
    cursor: pointer;
}

input {
    outline: none;
}

.write-content-input {
    background-color: inherit;
    color: black;
    outline: none;
    resize: none;

}

.add-to-post{
    font-size: 15px;
    font-weight: 600;
}

.my-post-div{
    background-color: rgb(36,37,38);
}

.like:hover,
.comment:hover,
.share:hover{
    background-color: rgb(58,59,60);
}

.pics-div{
    height: 2rem;
}

.pics{
    width: 2rem;
    height: 2rem;
}

.comment-input{
    background-color: rgb(58,59,60);
}

.comment-btn{
    right: 0.6rem;
    top: 0.1rem;
    width: 1.8rem;
    height: 1.8rem;
}

.comment-btn:hover{
    background-color: rgb(89, 89, 90);
}

.send-comment{
    font-size: 15px;
}

::-webkit-scrollbar{
    display: none;
}

@media (max-width: 1115px) {
    .left{
        display: none;
    }

    .middle{
        width: 75%;
    }

}

